styles/styles.css
:root {
  --text-main: var(--clr-gray-100);
  --text-high-contrast: var(--clr-white);
  --text-brand: var(--clr-brand-500);
  --text-brand-light: var(--clr-brand-400);

  --background-accent-light: var(--clr-green-400);
  --background-accent-main: var(--clr-green-500);
  --background-accent-dark: var(--clr-green-600);

  --background-extra-light: var(--clr-brown-500);
  --background-light: var(--clr-brown-600);
  --background-main: var(--clr-brown-700);
  --background-dark: var(--clr-brown-800);
  --background-extra-dark: var(--clr-brown-900);

  --font-family-heading: var(--ff-heading);
  --font-family-body: var(--ff-body);

  --font-size-heading-sm: var(--fs-700);
  --font-size-heading-regular: var(--fs-800);
  --font-size-heading-lg: var(--fs-900);
  --font-size-heading-xl: var(--fs-1000);

  --font-size-sm: var(--fs-300);
  --font-size-regular: var(--fs-400);
  --font-size-md: var(--fs-500);
  --font-size-lg: var(--fs-600);

  --border-radius-1: 0.25rem;
  --border-radius-2: 0.5rem;
  --border-radius-3: 0.75rem;
}

@view-transition {
  navigation: auto;
}

@layer reset {
  html {
    font-family: var(--ff-body);
    line-height: 1.6;
    scroll-padding: 3rem;
  }

  @media (prefers-reduced-motion: no-preference) {
    html {
      scroll-behavior: smooth;
    }
  }

  body {
    background-color: var(--background-main);
    color: var(--text-main);
    font-size: var(--font-size-regular);

    h1,
    h2,
    h3,
    h4 {
      font-family: var(--ff-heading);
      color: var(--text-high-contrast);
    }

    h1 {
      font-size: var(--font-size-heading-lg);
    }

    a {
      color: var(--text-high-contrast);
    }

    a:hover,
    a:focus-visible {
      color: var(--text-brand-light);
    }

    img {
      border-radius: var(--border-radius-3);
    }
  }
}

@layer layout {
  .flow > * + * {
    margin-top: 1em;
  }

  .grid-flow {
    gap: var(--grid-flow-gap, 1rem);
  }

  .equal-columns {
    display: grid;
    gap: var(--equal-columns-gap, 1rem);
    align-items: var(--equal-columns-vertical-alignment, stretch);

    @media (width > 760px) {
      grid-auto-flow: column;
      grid-auto-columns: 1fr;
    }

    &[data-gap="large"] {
      --equal-columns-gap: 2rem;
    }

    &[data-alignment="centered"] {
      --equal-columns-vertical-alignment: center;
    }
  }

  .section {
    --padding-block: 3.75rem;

    padding-block: var(--padding-block);

    @media (width > 720px) {
      padding-block: 8rem;
    }

    &[data-padding="compact"] {
      padding-block: var(--padding-block);
    }
  }

  .wrapper {
    --wraper-max-width: 1131px;
    --wrappper-width-wide: 1344px;
    --wrapper-width-narrow: 720px;

    max-width: var(--wraper-max-width);
    margin-inline: auto;
    padding: 1rem;

    box-sizing: content-box;

    &[data-width="wide"] {
      max-width: var(--wrappper-width-wide);
    }
    &[data-width="narrow"] {
      max-width: var(--wrapper-width-narrow);
    }
  }

  /* mushroom page */
  .grid-auto-fill {
    display: grid;
    gap: 1rem 1rem;
    grid-template-columns: repeat(auto-fill, minmax(min(250px, 100%), 1fr));
  }

  /* .flex-group {
    display: flex;
    gap: 1rem;
  } */
}

@layer components {
  .skip-to-main:not(:focus) {
    clip: rect(0 0 0 0);
    clip-path: inset(50%);
    height: 1px;
    overflow: hidden;
    position: absolute;
    white-space: nowrap;
    width: 1px;
  }

  .skip-to-main {
    position: absolute;
    background-color: var(--background-accent-main);
    top: 1rem;
    left: 2rem;
    padding: 1rem;
    border: 0;
    border-radius: var(--border-radius-2);
  }

  .primary-header__innner {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
    justify-content: space-between;
  }

  [aria-controls="primary-nav"] {
    z-index: 200;
    cursor: pointer;
    background: transparent;
    border: 0;
    display: none;
    img {
      border-radius: 0;
    }

    @media (width < 720px) {
      display: inline-block;
    }
  }

  .primary-nav {
    ul {
      display: flex;
      flex-wrap: wrap;
      gap: 0.5rem 1rem;
    }

    a {
      text-decoration: none;
    }

    @media (width < 720px) {
      display: none;
      position: absolute;
      z-index: 100;
      top: 0;
      right: 0;
      font-size: var(--font-size-lg);
      font-family: var(--ff-heading);
      background-color: var(--background-accent-main);
      padding: 2rem;
      font-weight: 700;
      border-radius: 0 0 0 var(--border-radius-2);

      ul {
        gap: 0;
        flex-direction: column;
      }

      /* li:not(:first-child) {} */
      li + li {
        margin-block-start: 1rem;
        padding-block-start: 1rem;
        border-top: 2px solid var(--background-accent-light);
      }
    }

    /* same as commented code */
    [aria-expanded="true"] ~ & {
      display: block;
    }
  }

  /* @media (width < 720px) {
    [aria-expanded="true"] ~ .primary-nav {
      display: block;
    }
  } */

  .hero {
    text-align: center;
    font-size: var(--font-size-md);
    color: var(--text-high-contrast);
    background-image: url("/assets//hero.webp");
    background-size: cover;
    background-position: center;
  }

  .hero__title {
    font-size: var(--font-size-heading-lg);

    span {
      font-size: var(--font-size-heading-xl);
      /* font-size: 7.5rem; */
      color: var(--text-brand);
      display: block;
    }
  }

  .mushroom-guide {
    --card-title-font-size: var(--font-size-lg);
    --card-title-color: var(--text-high-contrast);
    --card-gap: 0.75rem;
  }

  .card {
    display: flex;
    flex-direction: column;

    gap: var(--card-gap, 1rem);
    padding: 1rem;

    background-color: var(--background-light);
    border-radius: var(--border-radius-3);

    img {
      border-radius: var(--border-radius-2);
    }
  }

  .card__title {
    font-size: var(--card-title-font-size, var(--font-size-heading-sm));
    color: var(--card-title-color, var(--text-brand));
  }

  .card__note {
    background-color: var(--background-extra-light);
    padding: 0.75rem;
    border-radius: var(--border-radius-2);
    margin-block-start: auto;
  }

  .button {
    display: inline-flex;
    text-decoration: none;
    padding: 0.5rem;
    background-color: var(--background-accent-main);
    font-size: var(--font-size-md);
    border-radius: var(--border-radius-2);
    cursor: pointer;
    font-weight: 700;
    &:hover,
    &:focus-visible {
      color: var(--text-high-contrast);
      background-color: var(--background-accent-light);
    }
  }

  .primary-footer {
    text-align: center;
    background-color: var(--background-dark);
    padding: 2rem;
    display: grid;
    gap: 2rem;

    p {
      font-weight: 700;
      font-family: var(--ff-heading);
      font-size: var(--font-size-md);
      color: var(--text-high-contrast);
    }

    a {
      text-decoration: none;
      color: var(--text-main);
    }
    a:hover,
    a:focus-visible {
      color: var(--text-brand);
    }
  }

  .tag-list {
    display: flex;
    flex-wrap: wrap;
    gap: 0.5rem;

    li {
      font-family: var(--ff-heading);
      font-size: var(--font-size-sm);
      color: var(--text-high-contrast);
      border-radius: var(--border-radius-1);
      background-color: var(--tag-bg-clr);
      padding: 0.125rem 0.25rem;
    }

    [data-edible="edible"] {
      --tag-bg-clr: var(--background-accent-main);
    }
    [data-edible="toxic"] {
      --tag-bg-clr: var(--clr-red-500);
    }
    [data-season="summer"] {
      --tag-bg-clr: var(--background-accent-main);
    }
    [data-season="spring"] {
      --tag-bg-clr: var(--clr-teal-500);
    }
    [data-season="fall"] {
      --tag-bg-clr: var(--clr-orange-500);
    }
  }

  select {
    padding: 0.5rem 1rem;
    background-color: var(--background-accent-main);
    border-radius: var(--border-radius-1);
    color: var(--text-high-contrast);
  }

  .faq-bento {
    --card-title-color: var(--text-high-contrast);

    display: grid;
    gap: 1rem;
    grid-template-areas:
      "card-one"
      "card-two"
      "card-three"
      "card-four";

    .card:nth-child(1) {
      grid-area: card-one;
    }
    .card:nth-child(2) {
      grid-area: card-two;
    }
    .card:nth-child(3) {
      grid-area: card-three;
    }
    .card:nth-child(4) {
      grid-area: card-four;
    }

    .card > img {
      height: 100%;
      object-fit: cover;
    }

    @media (width > 600px) {
      grid-template-columns: repeat(2, 1fr);
      grid-template-areas:
        "card-one card-two"
        "card-three card-four";

      .card:nth-child(even) img {
        order: 3;
      }
    }

    @media (width > 900px) {
      grid-template-columns: repeat(3, 1fr);

      grid-template-areas:
        "card-one card-two card-four"
        "card-three card-three card-four";

      .card:nth-child(3) {
        display: grid;
        grid-template-columns: 300px 1fr;

        img {
          grid-column: 1;
          grid-row: 1 / 3;
        }
      }
    }
  }
}

@layer utilities {
  [hidden] {
    display: none;
  }
  .text-center {
    text-align: center;
  }
  .text-brand {
    color: var(--text-brand);
  }
  .text-high-contrast {
    color: var(--text-high-contrast);
  }

  .section-title {
    font-size: var(--font-size-heading-regular);
  }

  .background-base {
    background-color: var(--background-base);
  }
  .background-light {
    background-color: var(--background-light);
  }
  .background-extra-light {
    background-color: var(--background-extra-light);
  }
  .background-dark {
    background-color: var(--background-dark);
  }
  .background-extra-dark {
    background-color: var(--background-extra-dark);
  }

  .background-accent {
    background-color: var(--background-accent-dark);
  }

  .font-size-sm {
    font-size: var(--font-size-sm);
  }
  .font-size-regular {
    font-size: var(--font-size-regular);
  }
  .font-size-md {
    font-size: var(--font-size-md);
  }
  .font-size-lg {
    font-size: var(--font-size-lg);
  }
  /* visually-hidden for screen readers */
  .sr-only {
    clip: rect(0 0 0 0);
    clip-path: inset(50%);
    height: 1px;
    overflow: hidden;
    position: absolute;
    white-space: nowrap;
    width: 1px;
  }
}

